--- a/styles.css
+++ b/styles.css
@@ -1,105 +1,143 @@
+/* BACKGROUND */
 body {
-  background-image: url("./images/background.png");
-  background-size: cover;
+  max-width: 100%;
+  height: auto;
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  background: url("./images/background.png") no-repeat fixed center;
 }
 
-a {
-  text-decoration: none;
-  color: black;
-  font-family: Arial, Helvetica, sans-serif;
-}
+/* HEADER */
 
-a:hover {
-  color: #36b37e;
-}
-
+/* main box */
 .flex-container {
-  padding-top: 20px;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  height: 50%;
 }
 
-.flex-item {
-  width: 10%;
-  align-items: center;
-}
-
-.main {
+.social-links a {
+  color: #172b4d;
   text-align: center;
-  padding-top: 10%;
+}
+
+.outer-container {
+  flex-direction: column;
+  margin-top: 3%;
+}
+
+/* main container */
+.main-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 10%;
+  width: 70%;
+  padding: 0 17%;
 }
 
 h1 {
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 100%;
-  text-align: center;
-  letter-spacing: 0.37px;
+  font-weight: 800;
+  font-size: 40px;
+  margin-top: 1%;
 }
 
+p {
+  text-align: center;
+  padding: 0 17%;
+  width: 60%;
+  margin-top: 2%;
+  font-size: large;
+}
+
+/* items inside nav-bar */
+.flex-item {
+  margin: auto 3%;
+}
+
+/* Links inside nav-bar items */
+.flex-item a {
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Top navigation links */
+.outer-container a:hover {
+  color: #36b37e;
+}
+
+/* First Heading */
 .intro {
   color: #172b4d;
 }
 
+/* Second Heading */
 .profession {
   color: #36b37e;
 }
 
-p {
-  width: 70%;
-  text-align: center;
-  margin: auto;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
+/* tab and laptop */
 @media only screen and (min-width: 375px) {
-  body {
-    background-color: darkkhaki;
+  /* show normal navbar */
+  .remove-nav-item {
+    visibility: visible;
   }
 
-  h1 {
-    font-size: 20px;
+  /* hide logo */
+  #logo {
+    visibility: hidden;
   }
 
-  .header {
-    background-color: #172b4d;
-  }
-
-  .flex-item {
-    padding-bottom: 10px;
-    width: 20%;
-    top: 50%;
-    left: 50%;
-  }
-
-  a {
-    color: white;
+  /* hide link button */
+  #link {
+    visibility: hidden;
   }
 }
 
-@media only screen and (min-width: 768px) {
+/* mobile first version */
+@media only screen and (max-width: 768px) {
+  /* hide normal navbar */
+  .remove-nav-item {
+    visibility: hidden;
+  }
+
+  /* show logo */
+  #logo {
+    visibility: visible;
+  }
+
+  /* show link button */
+  #link {
+    visibility: visible;
+  }
+
+  /* background shrink */
   body {
-    background-color: transparent;
+    background-repeat: no-repeat;
+    background-size: 170%;
+    background-position: center;
   }
+}
 
-  h1 {
-    font-size: 30px;
-  }
+/* BOTTOM */
+i {
+  font-size: 200%;
+}
 
-  .header {
-    background-color: transparent;
-  }
+ul {
+  margin-top: 2%;
+  overflow: hidden;
+  list-style-type: none;
+  text-align: center;
+}
 
-  .flex-item {
-    width: 10%;
-    align-items: center;
-  }
+li {
+  display: inline-block;
+  margin-left: 2%;
+}
 
-  a {
-    color: black;
-  }
+
+.lower-container a:hover {
+  color: blue;
 }
