--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  box-sizing: border-box;
 }
 
 .social-links a {
@@ -24,7 +25,7 @@ body {
 
 .outer-container {
   flex-direction: column;
-  margin-top: 3%;
+  margin-top: 2%;
 }
 
 /* main container */
@@ -32,15 +33,15 @@ body {
   display: flex;
   flex-direction: column;
   text-align: center;
-  margin-top: 10%;
-  width: 70%;
+  margin-top: 9%;
+  width: 100%;
   padding: 0 17%;
 }
 
 h1 {
   font-weight: 800;
   font-size: 40px;
-  margin-top: 1%;
+  margin: 0%;
 }
 
 p {
@@ -122,7 +123,8 @@ p {
 
 /* BOTTOM */
 i {
-  font-size: 200%;
+  font-size: 170%;
+  color: #505f79;
 }
 
 ul {
@@ -139,4 +141,16 @@ li {
 
 .lower-container a:hover {
   color: blue;
+}
+
+.down-arrow {
+  text-align: center;
+  margin-top: 3%;
+}
+
+.down-arrow i {
+  border: 1px solid gainsboro;
+  border-radius: 100px;
+  position: absolute;
+  padding: 15px;
 }
