--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@ body {
   text-align: center;
 }
 
+.navbar {
+  margin: auto;
+}
+
 .outer-container {
   flex-direction: column;
   margin-top: 2%;
@@ -35,7 +39,6 @@ body {
   text-align: center;
   margin-top: 9%;
   width: 100%;
-  padding: 0 17%;
 }
 
 h1 {
@@ -46,10 +49,15 @@ h1 {
 
 p {
   text-align: center;
-  padding: 0 17%;
-  width: 60%;
+  width: 100%;
   margin-top: 2%;
   font-size: large;
+}
+
+.para {
+  display: flex;
+  justify-content: center;
+  padding: 0 3%;
 }
 
 /* items inside nav-bar */
@@ -151,6 +159,5 @@ li {
 .down-arrow i {
   border: 1px solid gainsboro;
   border-radius: 100px;
-  position: absolute;
   padding: 15px;
 }
