--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
 
 /* main box */
 .top-portion {
+  margin-top: 5%;
   width: 100%;
   height: 100%;
   display: flex;
@@ -126,6 +127,14 @@ p {
   .links-mobile {
     display: none;
   }
+
+  .hash-image-div {
+    display: none;
+  }
+
+  .about-me-container {
+    background-size: 100%;
+  }
 }
 
 /* mobile first version */
@@ -135,9 +144,18 @@ p {
     visibility: hidden;
   }
 
+  .hash-image-div hr {
+    width: 10%;
+    font-weight: bold;
+    border-top: 3px solid #36b37e;
+    margin: 5% auto;
+  }
+
   /* show logo */
   #logo {
     visibility: visible;
+    font-size: 20px;
+    font-weight: bold;
   }
 
   /* show link button */
@@ -148,7 +166,6 @@ p {
   /* background shrink */
   body {
     background-repeat: no-repeat;
-    background-size: 170%;
     background-position: center;
   }
 
@@ -168,10 +185,6 @@ p {
     margin-bottom: 0%;
   }
 
-  .about-touch {
-    margin: 5% 15%;
-  }
-
   .touch-class1,
   .touch-class2 {
     margin-top: 0%;
@@ -181,11 +194,19 @@ p {
     margin: 5% auto;
   }
 
+  .me-detail-grid {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+
+  .me-detail-grid p {
+    width: 475px;
+  }
+
   .about-me-container {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-size: 80%;
-    height: 50%;
+    background-size: 150%;
+    background-position: 0 300px;
   }
 
   .touch-class2 {
@@ -214,12 +235,67 @@ p {
   .links-mobile {
     display: flex;
   }
+
+  .outer-container {
+    background-size: 150%;
+    background-repeat: no-repeat;
+    background-position: -100px 100px;
+  }
+
+  .header-up {
+    margin-top: 15%;
+    padding: auto 10%;
+  }
+
+  .profession-div,
+  .intro-div {
+    margin: auto 15%;
+  }
+
+  .top-portion .intro,
+  .top-portion .profession {
+    font-size: 2rem;
+  }
+
+  .top-portion .intro-div,
+  .top-portion .profession-div {
+    width: 70%;
+  }
+
+  .para {
+    width: 70%;
+    margin: 5% 15%;
+  }
+
+  .down-arrow i {
+    font-size: 1rem;;
+    font-weight: bold;
+  }
+
+  .work-title-div {
+    width: 70%;
+    margin: auto 15%;
+  }
+
+  .work-title-div h1 {
+    font-size: 2.5rem;
+    font-weight: 700;
+  }
+
+  .hash-image-div {
+    display: inline;
+  }
 }
 
 /* BOTTOM */
 i {
   font-size: 170%;
   color: #505f79;
+}
+
+.down-arrow {
+  text-align: center;
+  margin-top: 3%;
 }
 
 ul {
@@ -236,11 +312,6 @@ li {
 
 .lower-container a:hover {
   color: blue;
-}
-
-.down-arrow {
-  text-align: center;
-  margin-top: 3%;
 }
 
 .down-arrow i {
@@ -289,15 +360,14 @@ li {
 
 .recent-work-det {
   grid-column: span 2;
-  justify-content: center;
-  position: relative;
-  margin: 20 auto 0 0;
-  padding: 0;
+  height: 50px;
+  margin-top: 2%;
 }
 
 .work-spec-items {
   width: inherit;
-  margin-bottom: 0;
+  height: 40px;
+  margin-top: -5%;
 }
 
 .my-task-row {
@@ -333,11 +403,6 @@ li {
   height: 252px;
 }
 
-.work-specs {
-  padding: 0;
-  margin-top: 2%;
-}
-
 .language-specs ul {
   list-style-type: none;
 }
@@ -350,32 +415,55 @@ li {
 
 .recent-work-det ul {
   width: 100%;
-  display: inline-block;
+  display: inline;
   padding: 0;
-  height: 40px;
-  margin: 0;
+  height: 50px;
 }
 
 .recent-work-det li {
   list-style: none;
   text-align: center;
   background-color: #ebf0ee;
-  line-height: 15px;
+  line-height: 19px;
   font-size: small;
   padding: 2px;
   width: 70px;
+  border-color: #ebf0ee;
+  border-radius: 4px;
+  height: 30px;
 }
 
 .see-project-btn {
   background-color: #36b37f;
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 10px 10px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 18px;
   border-radius: 8px;
+  width: 130px;
+  height: 50px;
+}
+
+.see-resume-btn {
+  background-color: #36b37f;
+  border: none;
+  color: white;
+  padding: 10px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  border-radius: 8px;
+  width: 160px;
+  height: 50px;
+}
+
+.me-detail-grid p {
+  width: 70%;
+  margin: auto 10%;
 }
 
 .see-project-btn:hover {
@@ -393,7 +481,6 @@ li {
   background-image: url("./images/bg2.png");
   justify-content: center;
   padding: 80px 0;
-  background-size: 100%;
   background-repeat: no-repeat;
   width: 99%;
   margin: auto;
@@ -433,18 +520,6 @@ li {
   justify-content: center;
   width: 100%;
   flex-wrap: wrap;
-}
-
-.detail-para {
-  margin: auto 20%;
-}
-
-.me-detail-grid {
-  padding: 10px;
-}
-
-.me-detail-grid .detail-para {
-  width: 70%;
 }
 
 .skill-pic {
