--- a/styles.css
+++ b/styles.css
@@ -138,8 +138,11 @@ p {
 }
 
 /* mobile first version */
+
 @media only screen and (max-width: 768px) {
+
   /* hide normal navbar */
+
   .remove-nav-item {
     visibility: hidden;
   }
@@ -152,6 +155,7 @@ p {
   }
 
   /* show logo */
+
   #logo {
     visibility: visible;
     font-size: 20px;
@@ -222,6 +226,10 @@ p {
     background-image: url("");
     background-repeat: no-repeat;
     background-size: 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .touch-item {
@@ -285,6 +293,39 @@ p {
   .hash-image-div {
     display: inline;
   }
+
+  .mob_form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 30px;
+    gap: 25px;
+  }
+
+  .mob_form input {
+    height: 48px;
+  }
+
+  .mob_form textarea {
+    height: 114px;
+  }
+
+  .mob_btn {
+    margin-left: 90px;
+  }
+
+  ul.icons {
+    position: relative;
+    top: 180px;
+  }
+
+  .touch-flex-item {
+    display: flex;
+    flex-direction: column;
+
+  }
+
+
 }
 
 /* BOTTOM */
@@ -468,6 +509,7 @@ li {
 
 .see-project-btn:hover {
   background-color: darkcyan;
+  cursor: pointer;
 }
 
 .see-project {
