Add some more changes

--- a/styles.css
+++ b/styles.css
@@ -532,6 +532,7 @@ textarea:focus {
     display: none;
     background-color: white;
     overflow: hidden;
+    height: 450px;
   }
 
   #panel a {
