--- a/styles.css
+++ b/styles.css
@@ -466,6 +466,44 @@ textarea:focus {
     vertical-align: middle;
     padding: 10px;
   }
+
+  #mobile-validation span {
+    margin: 2% auto auto 50%;
+    color: red;
+    font-size: 2.5rem;
+  }
+
+  #mobile-validation h3 {
+    margin-left: 20%;
+    width: 65%;
+  }
+
+  #mob-touch-btn {
+    align-self: center;
+  }
+}
+
+@media only screen and (min-width: 350px) and (max-width: 576px) {
+  #mobile-validation span {
+    margin: 2% auto auto 50%;
+    color: red;
+    font-size: 2.5rem;
+  }
+
+  #mobile-validation h3 {
+    margin-left: 20%;
+    width: 95%;
+  }
+
+  #mob-touch-btn {
+    align-self: center;
+  }
+}
+
+@media only screen and (min-width: 577px) and (max-width: 766px) {
+  #mob-touch-btn {
+    align-self: center;
+  }
 }
 
 /* --------------- m o b i l e ----------------------- */
@@ -885,6 +923,10 @@ textarea:focus {
     display: none;
   }
 
+  /* #mob-touch-btn {
+    margin-left: 35%;
+  } */
+
   .in-touch h2 {
     font-weight: 500;
     font-size: 30px;
@@ -911,7 +953,17 @@ textarea:focus {
     line-height: 24px;
     align-items: center;
     justify-content: center;
-    margin-left: 33%;
+  }
+
+  #mobile-validation span {
+    margin: 2% auto auto 50%;
+    color: red;
+    font-size: 2.5rem;
+  }
+
+  #mobile-validation h3 {
+    margin-left: 20%;
+    width: 65%;
   }
 }
 
@@ -1282,6 +1334,17 @@ textarea:focus {
 
   .labels {
     display: none;
+  }
+
+  #mobile-validation span {
+    margin: 2% auto auto 50%;
+    color: red;
+    font-size: 2.5rem;
+  }
+
+  #mobile-validation h3 {
+    margin-left: 20%;
+    width: 65%;
   }
 }
 
@@ -1706,6 +1769,16 @@ textarea:focus {
   .labels {
     display: none;
   }
+
+  #desktop-validation span {
+    margin: 2% auto auto 4%;
+    color: red;
+    font-size: 2.5rem;
+  }
+
+  #desktop-validation h3 {
+    width: 60%;
+  }
 }
 
 @media only screen and (min-width: 1150px) {
@@ -1916,5 +1989,9 @@ textarea:focus {
 
   .labels {
     display: none;
+  }
+
+  #desktop-validation h3 {
+    width: 100%;
   }
 }
